Fix Bug 423189 - Cannot make default script active

indeed it seems that it was not active by default

BUG: 423189
FIXED-IN: 5.17.0